@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="/css/sortable.css" type="text/css">
     <link rel="icon" type="image/png" href="/img/icon_favicon.png"/>
     <script type="text/javascript" src="/OpenLayers.js"></script>
-    <script type="text/javascript" src="/js/Point.js"></script>
+    <script type="text/javascript" src="/js/greatcircle.js"></script>
     <script type="text/javascript" src="/js/sortable.js"></script>
     <script type="text/javascript" src="/js/scw.js"></script>
-    <script type="text/javascript" src="/openflights.js?version=20080928"></script>
+    <script type="text/javascript" src="/openflights.js?version=20080930"></script>
   </head>
 
   <body>
@@ -30,8 +30,8 @@
 
 	    <div id="news">
 	      <img src="/img/close.gif" height=17 width=17 onClick='JavaScript:closeNews()'> 
-	      <B>News</b>: 28 Sep 2008: <a href="/about.html#CHANGES">Flight editing streamlined: next/prev, list reloading, change tracking</a><br>
-	      <i>Please hit CTRL-F5 to ensure your browser loads the latest version.</i>
+	      <B>News</b>: 30 Sep 2008: <a href="/about.html#CHANGES">Great Circle mapping implemented.</a><br>
+	      28 Sep 2008: <a href="/about.html#CHANGES">Flight editing streamlined: next/prev, list reloading, change tracking</a>
 	    </div>
 	    
 	    <div id="ajaxloader">
@@ -69,8 +69,13 @@
 	    </div> <!-- login -->
 	    
 	    <div id="statsbox">
-	      <div id="stats"></div>
-	      <input type="button" value="Stats" align="middle" onclick='JavaScript:xmlhttpPost("/php/stats.php")'>
+	      <table>
+		<tr><td>
+		    <span id="stats"></span>
+		  </td><td style='vertical-align: top; padding: 0px 5px'>
+		    <input type="button" value="Top 10" align="middle" onclick='JavaScript:xmlhttpPost("/php/stats.php")'>
+		  </td>
+		</tr></table>
 	    </div>
 	    
 	    <div id="filter">
